# LvAIgent

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  index.html  ngay-moi-video.html  package-lock.json  package.json  record-video.js  tailwind.config.js
src/: App.tsx  index.css  store.ts  types.ts  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: installer-hooks.nsh
src/components/: ActivityBar.tsx  AppContextMenu.tsx  ChatView.tsx  CodeContextMenu.tsx  CommandPalette.tsx  MessageBubble.tsx  PiPPlayer.tsx  ProjectPanel.tsx  RightPanel.tsx  SettingsDialog.tsx  Sidebar.tsx  SkillsDialog.tsx  TaskLogs.tsx  TitleBar.tsx  Toast.tsx  UpdateDialog.tsx
